# anyreader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  peekable.rs  stream.rs
src/container/: mod.rs  tar_container.rs  zip_container.rs
tests/: test_container.rs
tests/utils/: mod.rs
