[package]
name = "anyreader"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/orf/anyreader"
license = "MIT"
description = "Efficiently and recursively read archives and compressed streams of data"

[dependencies]
zstd = { version = "0.13.2", default-features = false, features = ["arrays"] }
flate2 = { version = "1.1.5", features = ["zlib-ng"], default-features = false }
liblzma = "0.4.5"
bzip2 = "0.6.1"
tar = "0.4.43"
zip = "6.0.0"
infer = "0.19.0"
tracing = "0.1.43"
strum = { version = "0.27.2", features = ["derive"] }

clio = { version = "0.3.5", features = ["clap-parse"], optional = true }
clap = { version = "4.5.53", features = ["derive"], optional = true }
anyhow = { version = "1.0.100", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[features]
default = []
cli = ["clio", "clap", "anyhow", "tracing-subscriber"]

[[bin]]
name = "anyreader"
required-features = ["cli"]

[profile.opt]
inherits = "release"
lto = true
codegen-units = 1

[profile.flamegraph]
inherits = "release"
lto = true
debug = true
codegen-units = 1